--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -628,6 +628,10 @@ sets:
     set_name: 20th Secret Rare Special Pack
     rarities:
     - 20th Secret Rare
+  - set_number: ''
+    set_name: Yu-Gi-Oh! Championship Series Japan 2019 prize card
+    rarities:
+    - Ultra Rare
   - set_number: 2019-JPP01
     set_name: Yu-Gi-Oh! World Championship 2019 attendance cards
     rarities:
