--- a/data/rush/18598.yaml
+++ b/data/rush/18598.yaml
@@ -55,4 +55,8 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Super Rare
+  - set_number: RD/BDG3-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Duel-3 Blu-ray & DVD promotional card
+    rarities:
+    - Ultra Parallel Rare
 yugipedia_page_id: 921244
