--- a/data/rush/18652.yaml
+++ b/data/rush/18652.yaml
@@ -33,7 +33,7 @@ atk: 100
 def: 100
 images:
 - index: 1
-  image: Aitsu-RDB224-JP-OP.png
+  image: Aitsu-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP009
