--- a/data/rush/18653.yaml
+++ b/data/rush/18653.yaml
@@ -42,7 +42,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: LevelBlast-RDB224-JP-OP.png
+  image: LevelBlast-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP010
