--- a/rush.yaml
+++ b/rush.yaml
@@ -89661,7 +89661,7 @@ atk: 0
 def: 1400
 images:
 - index: 1
-  image: DiggerSkipper-RDB224-JP-OP.png
+  image: DiggerSkipper-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP006
@@ -89707,7 +89707,7 @@ series:
 - Chameleon
 images:
 - index: 1
-  image: Princessleon-RDB224-JP-OP.png
+  image: Princessleon-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP007
@@ -89751,7 +89751,7 @@ atk: 1100
 def: 1200
 images:
 - index: 1
-  image: FairyDragon-RDB224-JP-OP.png
+  image: FairyDragon-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP008
@@ -89795,7 +89795,7 @@ atk: 100
 def: 100
 images:
 - index: 1
-  image: Aitsu-RDB224-JP-OP.png
+  image: Aitsu-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP009
@@ -89848,7 +89848,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: LevelBlast-RDB224-JP-OP.png
+  image: LevelBlast-RDB224-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP010
