--- a/data/cards/yugipedia931247.yaml
+++ b/data/cards/yugipedia931247.yaml
@@ -32,6 +32,7 @@ attribute: DARK
 level: 8
 atk: 2500
 def: 2200
+materials: 1 Tuner + 1 or more non-Tuner monsters
 images:
 - index: 1
   image: DiabolantistheMenacingMantis-PHHY-EN-C-1E.png
