--- a/data/cards/07127502.yaml
+++ b/data/cards/07127502.yaml
@@ -54,7 +54,7 @@ pendulum_effect:
   pt: |-
     Negue os efeitos de Monstros Pêndulo com a face para cima enquanto seu oponente os controlar.
   ja: |-
-    ①：このカードがＰゾーンに存在する限り、相手フィールドの表側表示のPモンスターの効果は無効化される。
+    ①：このカードがＰゾーンに存在する限り、相手フィールドの表側表示のＰモンスターの効果は無効化される。
   ko: |-
     ① : 이 카드가 펜듈럼 존에 존재하는 한, 상대 필드 앞면 표시의 펜듈럼 몬스터의 효과는 무효화된다.
   zh-TW:
