--- a/data/cards/45675980.yaml
+++ b/data/cards/45675980.yaml
@@ -22,7 +22,7 @@ text:
   it:
   pt:
   ja: |-
-    このカード名の①の効果は１ターンに１度しか使用できない。①：自分・相手ターンに発動できる。ドラゴン族モンスターを含む自分フィールドのモンスターを素材としてS召喚する。②：自分フィールドに「ビーステッド」モンスターが存在する限り、相手の儀式召喚のためにリリースされ相手の墓地へ送られるモンスター及び、相手の融合・Ｓ・リンク召喚の素材となり相手の墓地へ送られるモンスターは、墓地へは行かず除外される。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：自分・相手ターンに発動できる。ドラゴン族モンスターを含む自分フィールドのモンスターを素材としてＳ召喚する。②：自分フィールドに「ビーステッド」モンスターが存在する限り、相手の儀式召喚のためにリリースされ相手の墓地へ送られるモンスター及び、相手の融合・Ｓ・リンク召喚の素材となり相手の墓地へ送られるモンスターは、墓地へは行かず除外される。
   ko:
   zh-TW:
   zh-CN:
