--- a/data/cards/12615446.yaml
+++ b/data/cards/12615446.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por turno, durante o turno de qualquer duelista: você pode desassociar 2 Matérias Xyz deste card e, depois, escolher 1 monstro que seu oponente controla; mude a posição de batalha dele e, se isso acontecer, ele tem seus efeitos negados até o final deste turno. Uma vez por turno, quando este card destruir um monstro do oponente em batalha e enviá-lo para o Cemitério: você pode associar esse monstro destruído a este card como uma Matéria Xyz.
   ja: |-
     昆虫族・光属性レベル３モンスター×２体以上
-    ①：１ターンに１度、このカードのＸ素材を２つ取り除き、相手フィールドのモンスター１体を対象として発動できる。そのモンスターの表示形式を変更し、その効果をターン終了時まで無効にする。この効果は相手ターンでも発動できる。②：１ターンに１度、このカードが戦闘で相手モンスターを破壊し墓地へ送った時に発動できる。破壊したそのモンスターをこのカードの下に重ねてX素材とする。
+    ①：１ターンに１度、このカードのＸ素材を２つ取り除き、相手フィールドのモンスター１体を対象として発動できる。そのモンスターの表示形式を変更し、その効果をターン終了時まで無効にする。この効果は相手ターンでも発動できる。②：１ターンに１度、このカードが戦闘で相手モンスターを破壊し墓地へ送った時に発動できる。破壊したそのモンスターをこのカードの下に重ねてＸ素材とする。
   ko: |-
     곤충족 / 빛 속성 레벨 3 몬스터 × 2장 이상
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 2개 제거하고, 상대 필드 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 표시 형식을 변경하고, 그 효과를 턴 종료시까지 무효로 한다. 이 효과는 상대 턴에도 발동할 수 있다. ②: 1턴에 1번, 이 카드가 전투로 상대 몬스터를 파괴하고 묘지로 보냈을 때에 발동할 수 있다. 파괴한 그 몬스터를 이 카드의 아래에 겹쳐 엑시즈 소재로 한다.
