--- a/data/cards/14943837.yaml
+++ b/data/cards/14943837.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal: você pode escolher 1 monstro com 500 ou menos de ATK no seu Cemitério; Invoque o alvo por Invocação-Especial em Posição de Ataque, mas negue seus efeitos. Não pode ser usado como Matéria Sincro, exceto para a Invocação-Sincro de um monstro Dragão. A(s) outra(s) Matéria(s) Sincro não pode(m) ser de Nível 4.
   ja: |-
-    このカードをS素材とする場合、ドラゴン族モンスターのS召喚にしか使用できず、他のS素材モンスターは全てレベル４以外のモンスターでなければならない。①：このカードが召喚に成功した時、自分の墓地の攻撃力５００以下のモンスター１体を対象として発動できる。そのモンスターを攻撃表示で特殊召喚する。この効果で特殊召喚したモンスターの効果は無効化される。
+    このカードをＳ素材とする場合、ドラゴン族モンスターのＳ召喚にしか使用できず、他のＳ素材モンスターは全てレベル４以外のモンスターでなければならない。①：このカードが召喚に成功した時、自分の墓地の攻撃力５００以下のモンスター１体を対象として発動できる。そのモンスターを攻撃表示で特殊召喚する。この効果で特殊召喚したモンスターの効果は無効化される。
   ko: |-
     이 카드를 싱크로 소재로 할 경우, 드래곤족 몬스터의 싱크로 소환으로밖에 사용할 수 없으며, 다른 싱크로 소재 몬스터는 전부 레벨 4 이외의 몬스터이어야 한다. ①: 이 카드가 일반 소환에 성공했을 때, 자신 묘지의 공격력 500 이하의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 공격 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다.
   zh-TW:
