--- a/data/cards/26692769.yaml
+++ b/data/cards/26692769.yaml
@@ -34,7 +34,7 @@ text:
     Durante sua Fase Principal: você pode enviar 1 monstro "Os Cavaleiros Fantasmas" do seu Deck para o Cemitério e, depois, Baixar 1 Magia/Armadilha "Cavaleiros Fantasmas" diretamente do seu Deck em uma Zona de Magias & Armadilhas sua. Se um ou mais Monstros Xyz de TREVAS forem Invocados por Invocação-Especial em uma ou mais zonas para as quais este card apontar, enquanto este monstro estiver no campo (exceto durante a Etapa de Dano): você pode escolher 1 card no campo; destrua-o. Você só pode usar cada efeito de "Os Cavaleiros Fantasmas do Bardiche Enferrujado" uma vez por turno. Não pode ser usado como Matéria Link.
   ja: |-
     闇属性モンスター２体以上
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。このカードはリンク素材にできない。①：自分メインフェイズに発動できる。デッキから「幻影騎士団」モンスター１体を墓地へ送る。その後、デッキから「ファントム」魔法・罠カード１枚を選んで自分の魔法＆罠ゾーンにセットする。②：このカードが既にモンスターゾーンに存在する状態で、このカードのリンク先に闇属性Xモンスターが特殊召喚された場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。このカードはリンク素材にできない。①：自分メインフェイズに発動できる。デッキから「幻影騎士団」モンスター１体を墓地へ送る。その後、デッキから「ファントム」魔法・罠カード１枚を選んで自分の魔法＆罠ゾーンにセットする。②：このカードが既にモンスターゾーンに存在する状態で、このカードのリンク先に闇属性Ｘモンスターが特殊召喚された場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko: |-
     어둠 속성 몬스터 2장 이상
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. 이 카드는 링크 소재로 할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 덱에서 "팬텀 나이츠" 몬스터 1장을 묘지로 보낸다. 그 후, 덱에서 "팬텀" 마법 / 함정 카드 1장을 골라 자신의 마법 & 함정 존에 세트한다. ②: 이 카드가 이미 몬스터 존에 존재하는 상태에서, 이 카드의 링크 앞에 어둠 속성 엑시즈 몬스터가 특수 소환되었을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
