--- a/data/cards/28884172.yaml
+++ b/data/cards/28884172.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno: você pode escolher 1 monstro "Gagaga" no seu Cemitério, exceto "Invocador Gagaga"; Invoque-o por Invocação-Especial e, além disso, você não pode Invocar monstros por Invocação-Especial pelo resto deste turno, exceto monstros "Gagaga". Se este card for desassociado de um Monstro Xyz e enviado para o Cemitério para ativar um efeito desse monstro: você pode escolher 1 Monstro Xyz com a face para cima que você controla; ele ganha 500 de ATK até o final deste turno.
   ja: |-
-    ①：１ターンに１度、「ガガガマンサー」以外の自分の墓地の「ガガガ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果の発動後、ターン終了時まで自分は「ガガガ」モンスターしか特殊召喚できない。②：Ｘ素材のこのカードがＸモンスターの効果を発動するために取り除かれ墓地へ送られた場合、自分フィールドのXモンスター１体を対象として発動できる。そのモンスターの攻撃力はターン終了時まで５００アップする。
+    ①：１ターンに１度、「ガガガマンサー」以外の自分の墓地の「ガガガ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果の発動後、ターン終了時まで自分は「ガガガ」モンスターしか特殊召喚できない。②：Ｘ素材のこのカードがＸモンスターの効果を発動するために取り除かれ墓地へ送られた場合、自分フィールドのＸモンスター１体を対象として発動できる。そのモンスターの攻撃力はターン終了時まで５００アップする。
   ko: |-
     ① : 1턴에 1번, "가가가 맨서" 이외의 자신 묘지의 "가가가" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 "가가가" 몬스터밖에 특수 소환할 수 없다. ② : 엑시즈 소재의 이 카드가 엑시즈 몬스터의 효과를 발동하기 위해 제거되어 묘지로 보내졌을 경우, 자신 필드의 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지 500 올린다.
   zh-TW:
