--- a/data/cards/30398342.yaml
+++ b/data/cards/30398342.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno, se um ou mais monstros que você controla forem destruídos em batalha ou por um efeito de card: você pode Invocar por Invocação-Especial 1 monstro "Yang Zing" do seu Deck. Você não pode Invocar monstros do Deck Adicional por Invocação-Especial, exceto Monstros Sincro.
   ja: |-
-    ①：１ターンに１度、自分フィールドのモンスターが戦闘・効果で破壊された場合にこの効果を発動できる。デッキから「竜星」モンスター１体を特殊召喚する。②：このカードが魔法＆罠ゾーンに存在する限り、自分はSモンスター以外のモンスターをエクストラデッキから特殊召喚できない。
+    ①：１ターンに１度、自分フィールドのモンスターが戦闘・効果で破壊された場合にこの効果を発動できる。デッキから「竜星」モンスター１体を特殊召喚する。②：このカードが魔法＆罠ゾーンに存在する限り、自分はＳモンスター以外のモンスターをエクストラデッキから特殊召喚できない。
   ko: |-
     ① : 1턴에 1번, 자신 필드의 몬스터가 전투 / 효과로 파괴되었을 경우에 이 효과를 발동할 수 있다. 덱에서 "룡성" 몬스터 1장을 특수 소환한다. ② : 이 카드가 마법 & 함정 존에 존재하는 한, 자신은 S(싱크로)소환 이외의 몬스터를 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
