--- a/data/cards/36953371.yaml
+++ b/data/cards/36953371.yaml
@@ -34,7 +34,7 @@ text:
     Este card pode atacar enquanto estiver com a face para cima em Posição de Defesa. Se o fizer, use sua DEF para o cálculo de dano. Quando este card for Invocado por Invocação-Sincro, enquanto você não tiver Cards de Magia/Armadilha no seu Cemitério: você pode destruir todos os Cards de Magia e Armadilha que seu oponente controla.
   ja: |-
     機械族チューナー１体+チューナー以外の「超重武者」モンスター１体以上
-    このカードはルール上「超重武者」カードとしても扱う。①：このカードは表側守備表示のままで攻撃できる。その場合、このカードは守備力を攻撃力として扱いダメージ計算を行う。②：自分の墓地に魔法・罠カードが存在せず、このカードがＳ召喚に成功した時に発動できる。相手フィールドの魔法、罠カードを全て破壊する。
+    このカードはルール上「超重武者」カードとしても扱う。①：このカードは表側守備表示のままで攻撃できる。その場合、このカードは守備力を攻撃力として扱いダメージ計算を行う。②：自分の墓地に魔法・罠カードが存在せず、このカードがＳ召喚に成功した時に発動できる。相手フィールドの魔法・罠カードを全て破壊する。
   ko: |-
     기계족 튜너 1장 + 튜너 이외의 "초중무사" 몬스터 1장 이상
     이 카드는 룰상 "초중무사" 카드로도 취급한다. ① : 이 카드는 앞면 수비 표시 그대로 공격할 수 있다. 그 경우, 이 카드는 수비력을 공격력으로 취급하고, 데미지 계산을 실행한다. ② : 자신 묘지에 마법 / 함정 카드가 존재하지 않고, 이 카드가 싱크로 소환에 성공했을 때에 발동할 수 있다. 상대 필드의 마법 / 함정 카드를 전부 파괴한다.
