--- a/data/cards/59957503.yaml
+++ b/data/cards/59957503.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando o seu oponente ativa uma Carta Mágica/Armadilha ou monstro de efeito que tenha que pagar Pontos de Vida: Negue a ativação e retorne aquela carta para o Deck.
   ja: |-
-    相手がライフポイントを払って発動した効果モンスターの効果、魔法、罠カードを発動を無効にし、そのカードを持ち主のデッキに戻す。
+    相手がライフポイントを払って発動した効果モンスターの効果・魔法・罠カードを発動を無効にし、そのカードを持ち主のデッキに戻す。
   ko: |-
     상대가 라이프 포인트를 지불하고 발동한 효과 몬스터의 효과 / 마법 / 함정 카드의 발동을 무효로 하고, 그 카드를 주인의 덱으로 되돌린다.
   zh-TW: |-
