--- a/data/cards/70422863.yaml
+++ b/data/cards/70422863.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Cada Monstro Xyz "Cavaleirost" ganha 200 de ATK e DEF para cada Matéria Xyz assossiada a ele. Quando um Monstro Xyz "Cavaleirost" que você controla for escolhido como alvo de um ataque: você pode enviar 1 card "Cavaleirost" da sua mão para o Cemitério; negue o ataque.
   ja: |-
-    ①：フィールドの「テラナイト」Xモンスターの攻撃力・守備力はそのX素材の数×２００アップする。②：自分フィールドの「テラナイト」Xモンスターが攻撃対象に選択された時、手札の「テラナイト」カード１枚を墓地へ送って発動できる。その攻撃を無効にする。
+    ①：フィールドの「テラナイト」Ｘモンスターの攻撃力・守備力はそのＸ素材の数×２００アップする。②：自分フィールドの「テラナイト」Ｘモンスターが攻撃対象に選択された時、手札の「テラナイト」カード１枚を墓地へ送って発動できる。その攻撃を無効にする。
   ko: |-
     ① : 필드의 "테라나이트" X(엑시즈)몬스터의 공격력 / 수비력은 그 X(엑시즈)소재의 수 × 200 올린다. ② : 자신 필드의 "테라나이트" X(엑시즈)몬스터가 공격 대상으로 선택되었을 때, 패의 "테라나이트" 카드 1장을 묘지로 보내고 발동할 수 있다. 그 공격을 무효로 한다.
   zh-TW:
