--- a/data/cards/74689476.yaml
+++ b/data/cards/74689476.yaml
@@ -34,7 +34,7 @@ text:
     Você pode desassociar 1 matéria deste card; Invoque por Invocação-Especial 1 monstro "Magistus" do seu Deck e, além disso, você não pode Invocar monstros por Invocação-Especial do Deck Adicional pelo resto deste turno, exceto monstros "Magistus". Enquanto este card estiver equipado a um monstro: você pode escolher 1 Monstro de Efeito que seu oponente controla; negue seus efeitos até o final deste turno. Você só pode usar cada efeito de "Rilliona, a Maravilhosa Magistus do Guarda-Roupa de Bruxas" uma vez por turno.
   ja: |-
     属性が異なる魔法使い族レベル４モンスター×２
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのX素材を１つ取り除いて発動できる。デッキから「マギストス」モンスター１体を特殊召喚する。この効果の発動後、ターン終了時まで自分は「マギストス」モンスターしかＥＸデッキから特殊召喚できない。②：このカードが装備されている場合、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターの効果をターン終了時まで無効にする。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除いて発動できる。デッキから「マギストス」モンスター１体を特殊召喚する。この効果の発動後、ターン終了時まで自分は「マギストス」モンスターしかＥＸデッキから特殊召喚できない。②：このカードが装備されている場合、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターの効果をターン終了時まで無効にする。
   ko: |-
     속성이 다른 마법사족 레벨 4 몬스터 × 2
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 "마기스토스" 몬스터 1장을 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 "마기스토스" 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다. ②: 이 카드가 장착되어 있을 경우, 상대 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 효과를 턴 종료시까지 무효로 한다.
