--- a/data/cards/77202120.yaml
+++ b/data/cards/77202120.yaml
@@ -22,7 +22,7 @@ text:
   it:
   pt:
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを手札から特殊召喚する。その後、自分は７００ダメージを受ける。この効果で特殊召喚したこのカードがモンスターゾーンに表側表示で存在する限り、自分はＳモンスターしかＥＸデッキから特殊召喚できない。②：自分フィールドの表側表示のドラゴン族Sモンスターが、リリースされた場合または除外された場合、墓地のこのカードを除外し、そのモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを手札から特殊召喚する。その後、自分は７００ダメージを受ける。この効果で特殊召喚したこのカードがモンスターゾーンに表側表示で存在する限り、自分はＳモンスターしかＥＸデッキから特殊召喚できない。②：自分フィールドの表側表示のドラゴン族Ｓモンスターが、リリースされた場合または除外された場合、墓地のこのカードを除外し、そのモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
