--- a/data/cards/85969517.yaml
+++ b/data/cards/85969517.yaml
@@ -46,7 +46,7 @@ pendulum_effect:
   it:
   pt:
   ja: |-
-    このカード名のP効果は１ターンに１度しか使用できない。①：属性を１つ宣言して発動できる。このカードを持ち主のＥＸデッキに戻し、宣言した属性を持つ「海造賊トークン」（悪魔族・星４・攻／守０）をお互いのフィールドに１体ずつ守備表示で特殊召喚する。
+    このカード名のＰ効果は１ターンに１度しか使用できない。①：属性を１つ宣言して発動できる。このカードを持ち主のＥＸデッキに戻し、宣言した属性を持つ「海造賊トークン」（悪魔族・星４・攻／守０）をお互いのフィールドに１体ずつ守備表示で特殊召喚する。
   ko: |-
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 속성을 1개 선언하고 발동할 수 있다. 이 카드를 주인의 엑스트라 덱으로 되돌리고, 선언한 속성을 가지는 "플런드롤 토큰"(악마족 / 레벨 4 / 공 0 / 수 0)을 서로의 필드에 1장씩 수비 표시로 특수 소환한다.
   zh-TW:
