--- a/data/cards/86578200.yaml
+++ b/data/cards/86578200.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Na primeira vez em que cada monstro "Ator do Abismo" que você controla seria destruído em batalha a cada turno, ele não é destruído. Uma vez por turno: você pode escolher 1 monstro "Ator do Abismo" que você controla; seu oponente não pode escolhê-lo como alvo de efeitos de card até o final do turno dele (mesmo que este card deixe o campo). Se este card Baixado sob o controle do seu dono for destruído por um efeito de card do oponente e você tiver um Monstro Pêndulo "Ator do Abismo" com a face para cima no Deck Adicional: você pode devolver todos os cards que seu oponente controla para a mão.
   ja: |-
-    ①：このカードが魔法＆罠ゾーンに存在する限り、自分の「魔界劇団」モンスターはそれぞれ１ターンに１度だけ戦闘では破壊されない。②：１ターンに１度、自分フィールドの「魔界劇団」モンスター１体を対象として発動できる。相手ターン終了時まで、相手はそのモンスターを効果の対象にできない。③：自分のエクストラデッキに表側表示の「魔界劇団」Pモンスターが存在し、セットされたこのカードが相手の効果で破壊された場合に発動できる。相手フィールドのカードを全て持ち主の手札に戻す。
+    ①：このカードが魔法＆罠ゾーンに存在する限り、自分の「魔界劇団」モンスターはそれぞれ１ターンに１度だけ戦闘では破壊されない。②：１ターンに１度、自分フィールドの「魔界劇団」モンスター１体を対象として発動できる。相手ターン終了時まで、相手はそのモンスターを効果の対象にできない。③：自分のエクストラデッキに表側表示の「魔界劇団」Ｐモンスターが存在し、セットされたこのカードが相手の効果で破壊された場合に発動できる。相手フィールドのカードを全て持ち主の手札に戻す。
   ko: |-
     ①: 이 카드가 마법 & 함정 존에 존재하는 한, 자신의 "마계극단" 몬스터는 각각 1턴에 1번만 전투로는 파괴되지 않는다. ②: 1턴에 1번, 자신 필드의 "마계극단" 몬스터 1장을 대상으로 하고 발동할 수 있다. 상대 턴 종료시까지, 상대는 그 몬스터를 효과의 대상으로 할 수 없다. ③: 자신의 엑스트라 덱에 앞면 표시의 "마계극단" 펜듈럼 몬스터가 존재하고, 세트된 이 카드가 상대의 효과로 파괴되었을 경우에 발동할 수 있다. 상대 필드의 카드를 전부 주인의 패로 되돌린다.
   zh-TW:
