--- a/data/cards/94344242.yaml
+++ b/data/cards/94344242.yaml
@@ -33,7 +33,7 @@ text:
     Não pode ser usado como uma Matéria Xyz para uma Invocação-Xyz, exceto para a Invocação-Xyz de um monstro do Tipo Inseto. Uma vez por turno: você pode escolher 1 monstro com a face para cima em Posição de Ataque que você controla; coloque-o em Posição de Defesa e, se isso acontecer, Invoque por Invocação-Especial 1 monstro do Tipo Inseto de Nível 3 da sua mão, em Posição de Defesa. Um monstro Xyz que foi Invocado usando este card no campo como Matéria Xyz ganha este efeito.
     ● Se for Invocado por Invocação-Xyz: a DEF de todos os monstros com a face para cima que seu oponente controla se torna 0 e, além disso, coloque-os em Posição de Defesa.
   ja: |-
-    このカードをＸ召喚の素材とする場合、昆虫族モンスターのＸ召喚にしか使用できない。①：１ターンに１度、自分フィールドの表側攻撃表示モンスター１体を対象として発動できる。そのモンスターを守備表示にし、手札から昆虫族・レベル３モンスター１体を守備表示で特殊召喚する。②：フィールドのこのカードを素材としてX召喚したモンスターは以下の効果を得る。●このＸ召喚に成功した場合に発動する。相手フィールドの全ての表側表示モンスターは、守備力が０になり、守備表示になる。
+    このカードをＸ召喚の素材とする場合、昆虫族モンスターのＸ召喚にしか使用できない。①：１ターンに１度、自分フィールドの表側攻撃表示モンスター１体を対象として発動できる。そのモンスターを守備表示にし、手札から昆虫族・レベル３モンスター１体を守備表示で特殊召喚する。②：フィールドのこのカードを素材としてＸ召喚したモンスターは以下の効果を得る。●このＸ召喚に成功した場合に発動する。相手フィールドの全ての表側表示モンスターは、守備力が０になり、守備表示になる。
   ko: |-
     이 카드를 엑시즈 소환의 소재로 할 경우, 곤충족 몬스터의 엑시즈 소환으로밖에 사용할 수 없다. ①: 1턴에 1번, 자신 필드의 앞면 공격 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 하고, 패에서 곤충족 / 레벨 3 몬스터 1장을 수비 표시로 특수 소환한다. ②: 필드의 이 카드를 소재로 하고 엑시즈 소환한 몬스터는 이하의 효과를 얻는다. ●이 엑시즈 소환에 성공했을 경우에 발동한다. 상대 필드의 모든 앞면 표시 몬스터는, 수비력이 0 이 되고, 수비 표시가 된다.
   zh-TW:
