--- a/data/rush/17021.yaml
+++ b/data/rush/17021.yaml
@@ -35,7 +35,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地のモンスター（レベル６以下／サイキック族）１体を選び、［選んだモンスターの攻撃力］だけ自分のLPを回復する。この効果で１０００LP以上回復した場合、さらに選んだモンスターを手札に加える事ができる。
+    自分の墓地のモンスター（レベル６以下／サイキック族）１体を選び、［選んだモンスターの攻撃力］だけ自分のＬＰを回復する。この効果で１０００ＬＰ以上回復した場合、さらに選んだモンスターを手札に加える事ができる。
   ko: |-
     자신 묘지의 몬스터(레벨 6 이하 / 사이킥족) 1장을 고르고, [고른 몬스터의 공격력]만큼 자신의 LP를 회복한다. 이 효과로 1000 LP 이상 회복했을 경우, 추가로 고른 몬스터를 패에 넣을 수 있다.
   zh-TW:
