--- a/rush.yaml
+++ b/rush.yaml
@@ -49960,7 +49960,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地のモンスター（レベル６以下／サイキック族）１体を選び、［選んだモンスターの攻撃力］だけ自分のLPを回復する。この効果で１０００LP以上回復した場合、さらに選んだモンスターを手札に加える事ができる。
+    自分の墓地のモンスター（レベル６以下／サイキック族）１体を選び、［選んだモンスターの攻撃力］だけ自分のＬＰを回復する。この効果で１０００ＬＰ以上回復した場合、さらに選んだモンスターを手札に加える事ができる。
   ko: |-
     자신 묘지의 몬스터(레벨 6 이하 / 사이킥족) 1장을 고르고, [고른 몬스터의 공격력]만큼 자신의 LP를 회복한다. 이 효과로 1000 LP 이상 회복했을 경우, 추가로 고른 몬스터를 패에 넣을 수 있다.
   zh-TW:
@@ -59537,7 +59537,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分は５００LP回復する。
+    自分は５００ＬＰ回復する。
   ko: |-
     자신은 500 LP 회복한다.
   zh-TW:
@@ -61004,7 +61004,7 @@ effect:
   it:
   pt:
   ja: |-
-    相手フィールドの表側表示モンスター（守備力２０００以上）１体を選んで破壊する。自分は８００LP回復し、相手に８００ダメージを与える。このターン、自分は効果モンスターで攻撃できない。
+    相手フィールドの表側表示モンスター（守備力２０００以上）１体を選んで破壊する。自分は８００ＬＰ回復し、相手に８００ダメージを与える。このターン、自分は効果モンスターで攻撃できない。
   ko: |-
     상대 필드의 앞면 표시 몬스터(수비력 2000 이상) 1장을 고르고 파괴한다. 자신은 800 LP 회복하고, 상대에게 800 데미지를 준다. 이 턴에, 자신은 효과 몬스터로 공격할 수 없다.
   zh-TW:
