--- a/data/cards/07044562.yaml
+++ b/data/cards/07044562.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Olhe o seu Deck e, se isso acontecer, você pode adicionar 1 monstro do seu Deck à sua mão, cuja soma do ATK e DEF seja igual aos seus PV. Você só pode ativar 1 "Card da Alma" por turno.
   ja: |-
-    「魂のカード」は１ターンに１枚しか発動できない。①：自分のデッキを確認する。その中から攻撃力・守備力の合計が自分のLPと同じ数値となるモンスター１体を手札に加える事ができる。
+    「魂のカード」は１ターンに１枚しか発動できない。①：自分のデッキを確認する。その中から攻撃力・守備力の合計が自分のＬＰと同じ数値となるモンスター１体を手札に加える事ができる。
   ko: |-
     "영혼의 카드"는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 덱을 확인한다. 그 중에서 공격력 / 수비력의 합계가 자신의 LP와 같은 수치가 되는 몬스터 1장을 패에 넣을 수 있다.
   zh-TW:
