--- a/data/cards/87588741.yaml
+++ b/data/cards/87588741.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode Invocar este card por Invocação-Normal sem oferecer Tributo. Se este card for Invocado por Invocação-Normal sem oferecer Tributo, ou se for Invocado por Invocação-Especial, o Nível dele se torna 4 e o ATK original dele se torna 1800. Se este card for Invocado por Invocação-Normal/Baixado, ele não é afetado por efeitos ativados de monstros cujo Nível/Classe original seja menor que o Nível atual deste card. Quando este card for Invocado por Invocação-Tributo pelo Tributo de um ou mais monstros "Qli": você pode ativar este efeito; se seu oponente tiver mais monstros no Cemitério dele do que você, você ganha PV igual à diferença x 300, e, se isso acontecer, cause o mesmo valor de dano ao seu oponente.
   ja: |-
-    ①：このカードはリリースなしで召喚できる。②：特殊召喚またはリリースなしで召喚したこのカードのレベルは４になり、元々の攻撃力は１８００になる。③：通常召喚したこのカードは、このカードのレベルよりも元々のレベルまたはランクが低いモンスターが発動した効果を受けない。④：「クリフォート」モンスターをリリースしてこのカードのアドバンス召喚に成功した時に発動できる。相手の墓地のモンスターの数が自分の墓地のモンスターより多い場合、自分はその差×３００LP回復し、その数値分だけ相手にダメージを与える。
+    ①：このカードはリリースなしで召喚できる。②：特殊召喚またはリリースなしで召喚したこのカードのレベルは４になり、元々の攻撃力は１８００になる。③：通常召喚したこのカードは、このカードのレベルよりも元々のレベルまたはランクが低いモンスターが発動した効果を受けない。④：「クリフォート」モンスターをリリースしてこのカードのアドバンス召喚に成功した時に発動できる。相手の墓地のモンスターの数が自分の墓地のモンスターより多い場合、自分はその差×３００ＬＰ回復し、その数値分だけ相手にダメージを与える。
   ko: |-
     ①: 이 카드는 릴리스 없이 일반 소환할 수 있다. ②: 특수 소환 또는 릴리스 없이 일반 소환한 이 카드의 레벨은 4 가 되고, 원래 공격력은 1800 이 된다. ③: 통상 소환한 이 카드는, 이 카드의 레벨보다도 원래 레벨 또는 랭크가 낮은 몬스터가 발동한 효과를 받지 않는다. ④: "클리포트" 몬스터를 릴리스하고 이 카드의 어드밴스 소환에 성공했을 때에 발동할 수 있다. 상대 묘지의 몬스터 수가 자신 묘지의 몬스터보다 많을 경우, 자신은 그 차 × 300 LP 회복하고, 그 수치만큼만 상대에게 데미지를 준다.
   zh-TW:
