--- a/data/rush/17506.yaml
+++ b/data/rush/17506.yaml
@@ -35,7 +35,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地の「ミート・アンド・グリード」または「羊界－墓地に怨念」１枚を選んで自分の魔法＆罠ゾーンにセットする。自分フィールドに表側表示の「魔法羊女メェ～グちゃん」がいる場合、さらに自分は６００LP回復できる。
+    自分の墓地の「ミート・アンド・グリード」または「羊界－墓地に怨念」１枚を選んで自分の魔法＆罠ゾーンにセットする。自分フィールドに表側表示の「魔法羊女メェ～グちゃん」がいる場合、さらに自分は６００ＬＰ回復できる。
   ko: |-
     자신 묘지의 "미트 앤드 그리드" 또는 "양계－묘지에 원한" 1장을 고르고 자신의 마법 & 함정 존에 세트한다. 자신 필드에 앞면 표시의 "마법양녀 메에~구양"이 있을 경우, 추가로 자신은 600 LP 회복할 수 있다.
   zh-TW:
