--- a/data/rush/17543.yaml
+++ b/data/rush/17543.yaml
@@ -35,7 +35,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分は手札が５枚になるようにドローし、自分の手札を全て相手に見せる。その中にモンスターがいる場合、さらに自分は［そのモンスターの数］×２００LP回復する。
+    自分は手札が５枚になるようにドローし、自分の手札を全て相手に見せる。その中にモンスターがいる場合、さらに自分は［そのモンスターの数］×２００ＬＰ回復する。
   ko: |-
     자신은 패가 5장이 되도록 드로우하고, 자신의 패를 전부 상대에게 보여준다. 그 중에 몬스터가 있을 경우, 추가로 자신은 [그 몬스터의 수] × 200 LP 회복한다.
   zh-TW:
