--- a/rush.yaml
+++ b/rush.yaml
@@ -8831,7 +8831,7 @@ effect:
     1 mostro scoperto sul Terreno del tuo avversario perde ATK pari [all'ATK del mostro con l'ATK più alto nel tuo Cimitero] fino alla fine di questo turno.
   pt:
   ja: |-
-    相手フィールドの表側表示モンスター1体を選び、その攻撃力をターン終了時まで、［自分の墓地の攻撃力が一番高いモンスターの攻撃力］だけダウンする。
+    相手フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで、［自分の墓地の攻撃力が一番高いモンスターの攻撃力］だけダウンする。
   ko: |-
     상대 필드의 앞면 표시 몬스터 1장을 고르고, 그 공격력을 턴 종료시까지, [자신 묘지의 공격력이 가장 높은 몬스터의 공격력]만큼 내린다.
   zh-TW:
@@ -21419,7 +21419,7 @@ effect:
     1 mostro scoperto sul Terreno del tuo avversario perde ATK pari [al numero di mostri mandati al Cimitero per soddisfare il requisito] x 300 fino alla fine di questo turno.
   pt:
   ja: |-
-    相手フィールドの表側表示モンスター1体を選び、その攻撃力をターン終了時まで、［この効果の条件で墓地へ送ったモンスターの数］×３００ダウンする。
+    相手フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで、［この効果の条件で墓地へ送ったモンスターの数］×３００ダウンする。
   ko: |-
     상대 필드의 앞면 표시 몬스터 1장을 고르고, 그 공격력을 턴 종료시까지, [이 효과의 조건으로 묘지로 보낸 몬스터의 수] × 300 내린다.
   zh-TW:
@@ -23849,7 +23849,7 @@ effect:
     Distruggi 1 Carta Magia/Trappola sul Terreno di qualsiasi giocatore e pesca 1 carta. Poi, se hai distrutto una Carta Magia Terreno con questo effetto, puoi pescare 1 carta.
   pt:
   ja: |-
-    自分または相手フィールドの魔法・罠カード１枚を選んで破壊し、自分は１枚ドローする。この効果でフィールド魔法カードを破壊した場合、さらに自分は1枚ドローできる。
+    自分または相手フィールドの魔法・罠カード１枚を選んで破壊し、自分は１枚ドローする。この効果でフィールド魔法カードを破壊した場合、さらに自分は１枚ドローできる。
   ko: |-
     자신 또는 상대 필드의 마법 / 함정 카드 1장을 골라 파괴하고, 자신은 1장 드로우한다. 이 효과로 필드 마법 카드를 파괴했을 경우, 추가로 자신은 1장 드로우할 수 있다.
   zh-TW:
@@ -59151,7 +59151,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地の「ミート・アンド・グリード」または「羊界－墓地に怨念」１枚を選んで自分の魔法＆罠ゾーンにセットする。自分フィールドに表側表示の「魔法羊女メェ～グちゃん」がいる場合、さらに自分は６００LP回復できる。
+    自分の墓地の「ミート・アンド・グリード」または「羊界－墓地に怨念」１枚を選んで自分の魔法＆罠ゾーンにセットする。自分フィールドに表側表示の「魔法羊女メェ～グちゃん」がいる場合、さらに自分は６００ＬＰ回復できる。
   ko: |-
     자신 묘지의 "미트 앤드 그리드" 또는 "양계－묘지에 원한" 1장을 고르고 자신의 마법 & 함정 존에 세트한다. 자신 필드에 앞면 표시의 "마법양녀 메에~구양"이 있을 경우, 추가로 자신은 600 LP 회복할 수 있다.
   zh-TW:
@@ -61616,7 +61616,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分は手札が５枚になるようにドローし、自分の手札を全て相手に見せる。その中にモンスターがいる場合、さらに自分は［そのモンスターの数］×２００LP回復する。
+    自分は手札が５枚になるようにドローし、自分の手札を全て相手に見せる。その中にモンスターがいる場合、さらに自分は［そのモンスターの数］×２００ＬＰ回復する。
   ko: |-
     자신은 패가 5장이 되도록 드로우하고, 자신의 패를 전부 상대에게 보여준다. 그 중에 몬스터가 있을 경우, 추가로 자신은 [그 몬스터의 수] × 200 LP 회복한다.
   zh-TW:
