--- a/data/cards/82112494.yaml
+++ b/data/cards/82112494.yaml
@@ -22,7 +22,7 @@ text:
   it:
   pt:
   ja: |-
-    このカード名はルール上「超重武者」カードとしても扱う。このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地に魔法・罠カードが存在しない場合、手札からモンスター１体を捨てて発動できる。手札・デッキから「超重武者」モンスター１体を守備表示で特殊召喚する。この効果の発動後、ターン終了時まで自分は「超重武者」モンスターしか特殊召喚できない。②：このカードがＳ素材としてＥＸデッキに表側表示で加わった場合に発動できる。このカードを自分のPゾーンに置く。
+    このカード名はルール上「超重武者」カードとしても扱う。このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地に魔法・罠カードが存在しない場合、手札からモンスター１体を捨てて発動できる。手札・デッキから「超重武者」モンスター１体を守備表示で特殊召喚する。この効果の発動後、ターン終了時まで自分は「超重武者」モンスターしか特殊召喚できない。②：このカードがＳ素材としてＥＸデッキに表側表示で加わった場合に発動できる。このカードを自分のＰゾーンに置く。
   ko:
   zh-TW:
   zh-CN:
