--- a/data/cards/08775395.yaml
+++ b/data/cards/08775395.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 灾诞之咒眼
 text:
   en: |-
-    Send 1 "Evil Eye" monster and 1 "Evil Eye" Spell/Trap from your Deck to the GY; add 1 "Evil Eye" Equip Spell from your Deck to your hand, but for the rest of this turn, each time you activate a non-"Evil Eye" card or effect, you lose 500 LP. If you Link Summon an "Evil Eye" monster: You can banish this card from your GY; equip 1 "Evil Eye" Equip Spell from your GY to 1 "Evil Eye" Link Monster you control. You can only use each effect of "Evil Eyes Unleashed" once per turn.
+    Send 1 "Evil Eye" monster and 1 "Evil Eye" Spell/Trap from your Deck to the GY; add 1 "Evil Eye" Equip Spell from your Deck to your hand, but for the rest of this turn, each time you activate a non-"Evil Eye" card or effect, you lose 500 LP. If you Link Summon an "Evil Eye" Link Monster: You can banish this card from your GY; equip 1 "Evil Eye" Equip Spell from your GY to 1 "Evil Eye" Link Monster you control. You can only use each effect of "Evil Eyes Unleashed" once per turn.
   de:
   es:
   fr:
