--- a/rush.yaml
+++ b/rush.yaml
@@ -90333,3 +90333,228 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 931293
+---
+konami_id:
+name:
+  en: Great Maju Garzett
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card gains ATK equal to [the original ATK of 1 monster Tributed for the Tribute Summon of this card in Attack Position] x 2.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 6
+atk: 0
+def: 0
+legend: true
+images:
+- index: 1
+  image: GreatMajuGarzett-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP019
+    set_name: Legend Awakening Pack
+    rarities:
+    - Rare
+yugipedia_page_id: 931866
+---
+konami_id:
+name:
+  en: Legend Magician
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: レジェンド・マジシャン
+  ja_romaji: Rejendo Majishan
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 3 cards of your Deck. You can send 1 excavated monster to the Graveyard. Shuffle the remaining cards into the Deck. Then, you can add 1 Legend Normal Monster from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: LIGHT
+level: 4
+atk: 1100
+def: 300
+images:
+- index: 1
+  image: LegendMagician-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP005
+    set_name: Legend Awakening Pack
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+yugipedia_page_id: 931868
+---
+konami_id:
+name:
+  en: Legend Saber
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: レジェンド・セイバー
+  ja_romaji: Rejendo Seibā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, place 1 monster from your Graveyard on the bottom of the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 300 ATK until the end of this turn. Then, you can add 1 Warrior Type Legend monster from your Graveyard to your hand. If you do, you can only attack with Celestial Warrior or Warrior Type monsters this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: LIGHT
+level: 3
+atk: 1300
+def: 300
+images:
+- index: 1
+  image: LegendSaber-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP010
+    set_name: Legend Awakening Pack
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 931871
+---
+konami_id:
+name:
+  en: Inexperienced Dark Ruler
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>未<rt>み</rt></ruby><ruby>熟<rt>じゅく</rt></ruby>な<ruby>魔<rt>ま</rt></ruby><ruby>王<rt>おう</rt></ruby>
+  ja_romaji: Mijukuna Maō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 5 cards of your Deck. You can add 1 excavated Fiend Type Legend monster to your hand. Place the remaining cards on the bottom of the Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 2
+atk: 500
+def: 700
+images:
+- index: 1
+  image: InexperiencedDarkRuler-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP021
+    set_name: Legend Awakening Pack
+    rarities:
+    - Rare
+yugipedia_page_id: 931875
