--- a/data/rush/15178.yaml
+++ b/data/rush/15178.yaml
@@ -59,15 +59,17 @@ series:
 images:
 - index: 1
   image: SevensRoadWitch-RDKP01-JP-UR.png
-  illustration: SevensRoadWitch-DBR-JP-VG-artwork.png
+  illustration: ' SevensRoadWitch-DBR-JP-VG-artwork.png'
 - index: 2
   image: SevensRoadWitch-RD711A-JP-NPR.png
 - index: 3
   image: SevensRoadWitch-RDAKG3-JP-OP.png
 - index: 4
   image: SevensRoadWitch-RDMRP1-JP-R.png
+  illustration: '  SevensRoadWitch-G002-JP-VG-artwork-2.png'
 - index: 5
   image: SevensRoadWitch-RDBD07-JP-UPR.png
+  illustration: SevensRoadWitch-G002-JP-VG-artwork-3.png
 sets:
   ja:
   - set_number: RD/VS01-JP001
