--- a/data/rush/15184.yaml
+++ b/data/rush/15184.yaml
@@ -40,11 +40,13 @@ legend: true
 images:
 - index: 1
   image: BlueEyesWhiteDragon-RDKP01-JP-RR.png
-  illustration: BlueEyesWhiteDragon-DBR-JP-VG-artwork.png
+  illustration: ' BlueEyesWhiteDragon-DBR-JP-VG-artwork.png'
 - index: 2
   image: BlueEyesWhiteDragon-RDDD01-JP-ScR.png
+  illustration: BlueEyesWhiteDragon-G002-JP-VG-artwork-2.png
 - index: 3
   image: BlueEyesWhiteDragon-RDORP1-JP-ORR.png
+  illustration: BlueEyesWhiteDragon-G002-JP-VG-artwork-3.png
 sets:
   ja:
   - set_number: RD/KP01-JP000
