--- a/data/rush/16933.yaml
+++ b/data/rush/16933.yaml
@@ -49,6 +49,7 @@ images:
   illustration: GracefulCharity-DBR-JP-VG-artwork.png
 - index: 2
   image: GracefulCharity-RDSD01-JP-OP.png
+  illustration: ' GracefulCharity-G002-JP-VG-artwork-2.png'
 sets:
   ja:
   - set_number: RD/EXT1-JP049
