--- a/data/rush/16983.yaml
+++ b/data/rush/16983.yaml
@@ -51,8 +51,10 @@ series:
 images:
 - index: 1
   image: KimelunatheDarkShifter-RDKP07-JP-SR.png
+  illustration: ' KimelunatheDarkShifter-G002-JP-VG-artwork.png'
 - index: 2
   image: KimelunatheDarkShifter-RDBD05-JP-UPR.png
+  illustration: KimelunatheDarkShifter-G002-JP-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/KP07-JP017
