--- a/rush.yaml
+++ b/rush.yaml
@@ -60,16 +60,17 @@ series:
 images:
 - index: 1
   image: SevensRoadMagician-RDSST1-JP-C.png
-  illustration: SevensRoadMagician-DBR-JP-VG-artwork.png
+  illustration: '  SevensRoadMagician-DBR-JP-VG-artwork.png'
 - index: 2
   image: SevensRoadMagician-RDAKG1-JP-UR.png
 - index: 3
   image: SevensRoadMagician-RD711A-JP-NPR.png
 - index: 4
   image: SevensRoadMagician-RDMRP1-JP-R.png
+  illustration: '  SevensRoadMagician-G002-JP-VG-artwork-2.png'
 - index: 5
   image: SevensRoadMagician-RDORP1-JP-ORR.png
-  illustration: SevensRoadMagician-OW-2.png
+  illustration: SevensRoadMagician-G002-JP-VG-artwork-3.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
@@ -2109,15 +2110,17 @@ series:
 images:
 - index: 1
   image: SevensRoadWitch-RDKP01-JP-UR.png
-  illustration: SevensRoadWitch-DBR-JP-VG-artwork.png
+  illustration: ' SevensRoadWitch-DBR-JP-VG-artwork.png'
 - index: 2
   image: SevensRoadWitch-RD711A-JP-NPR.png
 - index: 3
   image: SevensRoadWitch-RDAKG3-JP-OP.png
 - index: 4
   image: SevensRoadWitch-RDMRP1-JP-R.png
+  illustration: '  SevensRoadWitch-G002-JP-VG-artwork-2.png'
 - index: 5
   image: SevensRoadWitch-RDBD07-JP-UPR.png
+  illustration: SevensRoadWitch-G002-JP-VG-artwork-3.png
 sets:
   ja:
   - set_number: RD/VS01-JP001
@@ -2211,11 +2214,13 @@ legend: true
 images:
 - index: 1
   image: BlueEyesWhiteDragon-RDKP01-JP-RR.png
-  illustration: BlueEyesWhiteDragon-DBR-JP-VG-artwork.png
+  illustration: ' BlueEyesWhiteDragon-DBR-JP-VG-artwork.png'
 - index: 2
   image: BlueEyesWhiteDragon-RDDD01-JP-ScR.png
+  illustration: BlueEyesWhiteDragon-G002-JP-VG-artwork-2.png
 - index: 3
   image: BlueEyesWhiteDragon-RDORP1-JP-ORR.png
+  illustration: BlueEyesWhiteDragon-G002-JP-VG-artwork-3.png
 sets:
   ja:
   - set_number: RD/KP01-JP000
@@ -45533,6 +45538,7 @@ images:
   illustration: GracefulCharity-DBR-JP-VG-artwork.png
 - index: 2
   image: GracefulCharity-RDSD01-JP-OP.png
+  illustration: ' GracefulCharity-G002-JP-VG-artwork-2.png'
 sets:
   ja:
   - set_number: RD/EXT1-JP049
@@ -47379,8 +47385,10 @@ series:
 images:
 - index: 1
   image: KimelunatheDarkShifter-RDKP07-JP-SR.png
+  illustration: ' KimelunatheDarkShifter-G002-JP-VG-artwork.png'
 - index: 2
   image: KimelunatheDarkShifter-RDBD05-JP-UPR.png
+  illustration: KimelunatheDarkShifter-G002-JP-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/KP07-JP017
@@ -90513,7 +90521,7 @@ name:
   it:
   pt:
   ja: <ruby>未<rt>み</rt></ruby><ruby>熟<rt>じゅく</rt></ruby>な<ruby>魔<rt>ま</rt></ruby><ruby>王<rt>おう</rt></ruby>
-  ja_romaji: Mijukuna Maō
+  ja_romaji: Mijuku na Maō
   ko:
   ko_rr:
   zh-TW:
