--- a/data/rush/15410.yaml
+++ b/data/rush/15410.yaml
@@ -40,10 +40,10 @@ legend: true
 images:
 - index: 1
   image: DarkMagician-RDKP02-JP-RR.png
-  illustration: DarkMagician-DBR-JP-VG-artwork.png
+  illustration: ' DarkMagician-DBR-JP-VG-artwork.png'
 - index: 2
   image: DarkMagician-RDGRP1-JP-ScR.png
-  illustration: DarkMagician-RDGRP1-JP-OP.png
+  illustration: DarkMagician-G002-JP-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/KP02-JP000
