--- a/data/rush/17856.yaml
+++ b/data/rush/17856.yaml
@@ -36,7 +36,10 @@ series:
 - Heartless Hound
 images:
 - index: 1
-  image: HeartlessHoundStrikingKaiKenKnuckle-RDKP10-JP-R.png
+  image: '  HeartlessHoundStrikingKaiKenKnuckle-RDKP10-JP-R.png'
+  illustration: HeartlessHoundStrikingKaiKenKnuckle-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: HeartlessHoundStrikingKaiKenKnuckle-RDKP10-KR-R.png
 sets:
   ja:
   - set_number: RD/KP10-JP008
