--- a/data/rush/17877.yaml
+++ b/data/rush/17877.yaml
@@ -50,7 +50,10 @@ series:
 - Bubble Actress
 images:
 - index: 1
-  image: NuviatheWickedMischiefMaker-RDKP10-JP-C.png
+  image: '  NuviatheWickedMischiefMaker-RDKP10-JP-C.png'
+  illustration: NuviatheWickedMischiefMaker-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: NuviatheWickedMischiefMaker-RDKP10-KR-C.png
 sets:
   ja:
   - set_number: RD/KP10-JP029
