--- a/data/rush/17897.yaml
+++ b/data/rush/17897.yaml
@@ -46,7 +46,10 @@ series:
 - Bubble Actress
 images:
 - index: 1
-  image: BubbleKingdom-RDKP10-JP-C.png
+  image: '  BubbleKingdom-RDKP10-JP-C.png'
+  illustration: BubbleKingdom-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: BubbleKingdom-RDKP10-KR-C.png
 sets:
   ja:
   - set_number: RD/KP10-JP049
