--- a/data/rush/17898.yaml
+++ b/data/rush/17898.yaml
@@ -46,7 +46,10 @@ series:
 - Heartless Hound
 images:
 - index: 1
-  image: WoofderfulHeartlessHound-RDKP10-JP-C.png
+  image: '  WoofderfulHeartlessHound-RDKP10-JP-C.png'
+  illustration: WoofderfulHeartlessHound-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: WoofderfulHeartlessHound-RDKP10-KR-C.png
 sets:
   ja:
   - set_number: RD/KP10-JP050
