--- a/data/rush/15351.yaml
+++ b/data/rush/15351.yaml
@@ -36,10 +36,10 @@ legend: true
 images:
 - index: 1
   image: RedEyesBlackDragon-RDVJMP-JP-RR.png
-  illustration: RedEyesBlackDragon-DBR-JP-VG-artwork.png
+  illustration: ' RedEyesBlackDragon-DBR-JP-VG-artwork.png'
 - index: 2
   image: RedEyesBlackDragon-RDG002-JP-ORR.png
-  illustration: RedEyesBlackDragon-RDGRP1-JP-OP.png
+  illustration: RedEyesBlackDragon-G002-JP-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/VJMP-JP001
