--- a/data/rush/17001.yaml
+++ b/data/rush/17001.yaml
@@ -68,8 +68,10 @@ series:
 images:
 - index: 1
   image: CANDLIVE-RDKP07-JP-UR.png
+  illustration: ' CANDLIVE-G002-JP-VG-artwork.png'
 - index: 2
   image: CANDLIVE-RDBD06-JP-UPR.png
+  illustration: CANDLIVE-G002-JP-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/KP07-JP035
