--- a/data/rush/17492.yaml
+++ b/data/rush/17492.yaml
@@ -37,11 +37,12 @@ series:
 images:
 - index: 1
   image: MagicalSheepGirlMeeegchan-RDKP09-JP-SR.png
-  illustration: MagicalSheepGirlMeeegchan-OW.png
+  illustration: ' MagicalSheepGirlMeeegchan-G002-JP-VG-artwork.png'
 - index: 2
   image: MagicalSheepGirlMeeegchan-RD711B-JP-NPR.png
 - index: 3
   image: MagicalSheepGirlMeeegchan-RDBDG1-JP-UPR.png
+  illustration: MagicalSheepGirlMeeegchan-G002-JP-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/KP09-JP006
