--- a/data/rush/17497.yaml
+++ b/data/rush/17497.yaml
@@ -34,7 +34,10 @@ atk: 800
 def: 1500
 images:
 - index: 1
-  image: ProtectoroftheThrone-RDKP09-JP-R.png
+  image: '  ProtectoroftheThrone-RDKP09-JP-R.png'
+  illustration: ProtectoroftheThrone-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: ProtectoroftheThrone-RDKP09-KR-R.png
 sets:
   ja:
   - set_number: RD/KP09-JP011
