--- a/data/rush/17547.yaml
+++ b/data/rush/17547.yaml
@@ -44,7 +44,10 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: EngageandStrike-RDKP09-JP-R.png
+  image: '  EngageandStrike-RDKP09-JP-R.png'
+  illustration: EngageandStrike-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: EngageandStrike-RDKP09-KR-R.png
 sets:
   ja:
   - set_number: RD/KP09-JP061
