--- a/data/rush/17864.yaml
+++ b/data/rush/17864.yaml
@@ -34,7 +34,10 @@ atk: 1900
 def: 2000
 images:
 - index: 1
-  image: Nekogal2-RDKP10-JP-R.png
+  image: '  Nekogal2-RDKP10-JP-R.png'
+  illustration: Nekogal2-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: Nekogal2-RDKP10-KR-R.png
 sets:
   ja:
   - set_number: RD/KP10-JP016
