--- a/data/rush/18253.yaml
+++ b/data/rush/18253.yaml
@@ -48,7 +48,10 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: TaibanBluemai-RDKP11-JP-C.png
+  image: '  TaibanBluemai-RDKP11-JP-C.png'
+  illustration: TaibanBluemai-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: TaibanBluemai-RDKP11-KR-C.png
 sets:
   ja:
   - set_number: RD/KP11-JP021
