--- a/data/rush/18258.yaml
+++ b/data/rush/18258.yaml
@@ -48,7 +48,10 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: BandijooftheBattleBallad-RDKP11-JP-UR.png
+  image: '  BandijooftheBattleBallad-RDKP11-JP-UR.png'
+  illustration: BandijooftheBattleBallad-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: BandijooftheBattleBallad-RDKP11-KR-UR.png
 sets:
   ja:
   - set_number: RD/KP11-JP026
