--- a/data/rush/yugipedia931875.yaml
+++ b/data/rush/yugipedia931875.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Inexperienced Dark Ruler
+  en: Embryonic Dark Ruler
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ atk: 500
 def: 700
 images:
 - index: 1
-  image: InexperiencedDarkRuler-RDLGP1-JP-OP.png
+  image: EmbryonicDarkRuler-RDLGP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/LGP1-JP021
