--- a/rush.yaml
+++ b/rush.yaml
@@ -90551,7 +90551,7 @@ yugipedia_page_id: 931871
 ---
 konami_id:
 name:
-  en: Inexperienced Dark Ruler
+  en: Embryonic Dark Ruler
   de:
   es:
   fr:
@@ -90595,7 +90595,7 @@ atk: 500
 def: 700
 images:
 - index: 1
-  image: InexperiencedDarkRuler-RDLGP1-JP-OP.png
+  image: EmbryonicDarkRuler-RDLGP1-JP-OP.png
 sets:
   ja:
   - set_number: RD/LGP1-JP021
