--- a/data/rush/17288.yaml
+++ b/data/rush/17288.yaml
@@ -50,7 +50,10 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: RhythmicalPerformer-RDKP08-JP-SR.png
+  image: '  RhythmicalPerformer-RDKP08-JP-SR.png'
+  illustration: RhythmicalPerformer-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: RhythmicalPerformer-RDKP08-KR-SR.png
 sets:
   ja:
   - set_number: RD/KP08-JP012
