--- a/data/rush/17319.yaml
+++ b/data/rush/17319.yaml
@@ -64,7 +64,10 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: HormoneGunMcQueentheMagnificentShichirin-RDKP08-JP-R.png
+  image: '  HormoneGunMcQueentheMagnificentShichirin-RDKP08-JP-R.png'
+  illustration: HormoneGunMcQueentheMagnificentShichirin-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: HormoneGunMcQueentheMagnificentShichirin-RDKP08-KR-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP043
