--- a/data/rush/17313.yaml
+++ b/data/rush/17313.yaml
@@ -64,7 +64,10 @@ series:
 - Shadow Flower
 images:
 - index: 1
-  image: MeikaEtraynzetheShadowFlowerVenus-RDKP08-JP-R.png
+  image: '  MeikaEtraynzetheShadowFlowerVenus-RDKP08-JP-R.png'
+  illustration: MeikaEtraynzetheShadowFlowerVenus-G002-JP-VG-artwork.png
+- index: '1.1'
+  image: MeikaEtraynzetheShadowFlowerVenus-RDKP08-KR-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP037
