--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -22,9 +22,10 @@
 - yugipedia: 371832
   fake_password: 10000090
 ## Prereleases
-- set_abbreviation: SLF1
-  fake_password_range:
-    - 100293000
-# Beetle Amalgamaton Zekstagger
-- yugipedia: 900492
-  fake_password: 100200226
+# Superheavy Samurai Constable
+- yugipedia: 921008
+  fake_password: 100200229
+# Power Pro Knight Girls
+- yugipedia: 929429
+  fake_password: 100299002
+  
