--- a/data/cards/59494222.yaml
+++ b/data/cards/59494222.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Inscrição do Coveiro
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>守<rt>もり</rt></ruby>の<ruby>刻<rt>こく</rt></ruby><ruby>印<rt>いん</rt></ruby>
   ja_romaji: Hakamori no Kokuin
   ko:
@@ -23,7 +23,11 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    No começo da sua Fase Principal 1: aplique 1 dos seguintes efeitos até o final do turno do seu oponente.
+    ● Nenhum duelista pode ativar efeitos de card no Cemitério.
+    ● Nenhum duelista pode banir cards do Cemitério.
+    ● Nenhum duelista pode Invocar monstros por Invocação-Especial dos Cemitérios.
   ja: |-
     ①：自分メインフェイズ１開始時に発動できる。以下の効果から１つを選び、相手ターン終了時まで適用する。
     ●お互いに墓地のカードの効果を発動できない。
