--- a/data/cards/54098121.yaml
+++ b/data/cards/54098121.yaml
@@ -15,7 +15,8 @@ name:
   zh-CN: 谜之傀儡师
 text:
   en: |-
-    Each time you or your opponent Normal Summons or Flip Summons a monster, increase your Life Points by 500 points.
+    (This card is not treated as a "Puppet" card.)
+     If another monster is Normal or Flip Summoned: Gain 500 LP.
   de: |-
     Solange diese Karte offen auf dem Spielfeld liegt, erhöhen sich die Life Points des kontrollierenden Spielers für jedes beschworene Monster (auch für Monster deines Gegners, aber nicht für Spezialbeschwörung) um 500 Punkte.
   es: |-
