--- a/data/cards/71106375.yaml
+++ b/data/cards/71106375.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 朱罗纪禽龙
 text:
   en: |-
-    If this card destroys an opponent's monster by by battle: You can target 1 Set card your opponent controls; return that target to the hand.
+    If this card destroys an opponent's monster by battle: You can target 1 Set card your opponent controls; return that target to the hand.
   de: |-
     Falls diese Karte ein Monster deines Gegners durch Kampf zerstört, kannst du 1 gesetzte Karte wählen, die dein Gegner kontrolliert, und sie auf die Hand zurückgeben.
   es: |-
